--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1111,7 +1111,7 @@
                 professional fields.
               </p>
               <p>
-                more....
+                <a href="/about-us" style="color: #f39c12; text-decoration: underline;">Read more about us</a>
               </p>
               <span class="core">Core strength</span>
             </div>
@@ -2004,7 +2004,7 @@
     <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
             News Section Area Start Here
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-    <section class="news-section-area margin-top-110">
+    {{!-- <section class="news-section-area margin-top-110">
       <div class="container custom-container-01">
         <div class="row justify-content-center">
           <div class="col-lg-12">
@@ -2077,7 +2077,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> --}}
     <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
             News Section Area End Here
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
