--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -46,7 +46,7 @@
             </a>
             <!-- <a href="#">Pages</a> -->
             <ul class="sub-menu">
-              <li><a href="/georgia">Georgia Page</a></li>
+              <li><a href="/georgia">Georgia</a></li>
               <li><a href="/coming">India</a></li>
               <li><a href="/coming">Russia</a></li>
               <li><a href="/coming">Nepal</a></li>
