--- a/views/about-us.hbs
+++ b/views/about-us.hbs
@@ -709,33 +709,33 @@
             <div class="form-row">
               <div class="form-groups">
                 <label for="name">Your Name</label>
-                <input type="text" id="name" placeholder="Enter your name" required />
+                <input type="text" id="name" name="name" placeholder="Enter your name" required />
               </div>
               <div class="form-groups">
                 <label for="email">Your Email Address</label>
-                <input type="email" id="email" placeholder="Enter your email" required />
+                <input type="email" id="email" name="email" placeholder="Enter your email" required />
               </div>
             </div>
 
             <div class="form-row">
               <div class="form-groups">
                 <label for="mobile">Your Mobile Number</label>
-                <input type="tel" id="mobile" placeholder="+91XXXXXXXXXX" pattern="^\+?\d{10,15}$" required />
+                <input type="tel" id="mobile" name="mobile" placeholder="+91XXXXXXXXXX" pattern="^\+?\d{10,15}$" required />
               </div>
               <div class="form-groups">
                 <label for="country">Enter your Country</label>
-                <input type="text" id="country" placeholder="Enter your country" required />
+                <input type="text" id="country" name="country" placeholder="Enter your country" required />
               </div>
             </div>
 
             <div class="form-row">
               <div class="form-groups">
                 <label for="state">Enter your state</label>
-                <input type="text" id="state" placeholder="Enter your state" required />
+                <input type="text" id="state" name="state" placeholder="Enter your state" required />
               </div>
               <div class="form-groups">
                 <label for="city">Enter your City</label>
-                <input type="text" id="city" placeholder="Enter your city" required />
+                <input type="text" id="city" name="city" placeholder="Enter your city" required />
               </div>
             </div>
             <button class="new-about-button" type="submit">Submit</button>
@@ -780,6 +780,8 @@
   <script src="assets/js/slick.min.js"></script>
   <!-- main js -->
   <script src="assets/js/main.js"></script>
+  <!-- About form js -->
+  <script src="assets/js/about-form.js"></script>
 </body>
 
 </html>
