--- a/views/apply-online.hbs
+++ b/views/apply-online.hbs
@@ -62,24 +62,22 @@
                                 <div class="row justify-content-between">
                                     <div class="col-lg-12">
                                         <div class="contact-form">
-                                            <form class="form">
+                                            <form class="form" id="liveCounsellingForm">
                                                 <div class="part">
                                                     <h5 class="title">Primary Information</h5>
                                                     <div class="form-element">
                                                         <div class="row">
                                                             <div class="col-md-4 col-lg-4">
                                                                 <i class="fa-solid fa-user"></i>
-                                                                <input type="text" placeholder="Full name" required="">
+                                                                <input type="text" name="fullName" placeholder="Full name" required>
                                                             </div>
                                                             <div class="col-md-4 col-lg-4">
                                                                 <i class="fa-solid fa-envelope-open"></i>
-                                                                <input type="email" placeholder="Email address"
-                                                                    required="">
+                                                                <input type="email" name="email" placeholder="Email address" required>
                                                             </div>
                                                             <div class="col-md-4 col-lg-4">
                                                                 <i class="fa-solid fa-phone"></i>
-                                                                <input type="tel" placeholder="Phone number"
-                                                                    required="">
+                                                                <input type="tel" name="phone" placeholder="Phone number" required>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -87,9 +85,8 @@
                                                         <div class="row">
                                                             <div class="col-md-4 col-lg-4">
                                                                 <i class="fa-sharp fa-solid fa-earth-americas"></i>
-                                                                <select name="" id="">
-                                                                    <option disabled selected hidden>Nationality
-                                                                    </option>
+                                                                <select name="nationality" required>
+                                                                    <option disabled selected hidden>Nationality</option>
                                                                     <option value="Canada">Canada</option>
                                                                     <option value="America">America</option>
                                                                     <option value="London">London</option>
@@ -99,13 +96,13 @@
                                                                 <i class="fa-solid fa-calendar-days"></i>
                                                                 <div class="ui calendar datepicker">
                                                                     <div class="ui input left">
-                                                                        <input type="text" placeholder="Date of birth">
+                                                                        <input type="text" name="dateOfBirth" placeholder="Date of birth" required>
                                                                     </div>
                                                                 </div>
                                                             </div>
                                                             <div class="col-md-4 col-lg-4">
                                                                 <i class="fa-solid fa-user"></i>
-                                                                <select name="" id="">
+                                                                <select name="gender" required>
                                                                     <option disabled selected hidden>Gender</option>
                                                                     <option value="male">Male</option>
                                                                     <option value="female">Female</option>
@@ -115,128 +112,42 @@
                                                     </div>
                                                 </div>
 
-                                                <!-- <div class="part">
-                                                    <h5 class="title">Select prefered study destination <span
-                                                            class="sub">(Select Multiple)</span></h5>
-
-                                                    <ul class="ul selection-list">
-                                                        <li>
-                                                            <input type="radio" name="country">
-                                                            <div class="thumb">
-                                                                <img src="assets/img/flag/02.png" alt="">
-                                                            </div>
-
-                                                            <div class="content">
-                                                                <h5 class="title">Canada</h5>
-                                                            </div>
-                                                        </li>
-                                                        <li>
-                                                            <input type="radio" name="country">
-                                                            <div class="thumb">
-                                                                <img src="assets/img/flag/01.png" alt="">
-                                                            </div>
-
-                                                            <div class="content">
-                                                                <h5 class="title">America</h5>
-                                                            </div>
-                                                        </li>
-                                                        <li>
-                                                            <input type="radio" name="country">
-                                                            <div class="thumb">
-                                                                <img src="assets/img/flag/06.png" alt="">
-                                                            </div>
-
-                                                            <div class="content">
-                                                                <h5 class="title">London</h5>
-                                                            </div>
-                                                        </li>
-                                                        <li>
-                                                            <input type="radio" name="country">
-                                                            <div class="thumb">
-                                                                <img src="assets/img/flag/03.png" alt="">
-                                                            </div>
-
-                                                            <div class="content">
-                                                                <h5 class="title">Spain</h5>
-                                                            </div>
-                                                        </li>
-                                                        <li>
-                                                            <input type="radio" name="country">
-                                                            <div class="thumb">
-                                                                <img src="assets/img/flag/04.png" alt="">
-                                                            </div>
-
-                                                            <div class="content">
-                                                                <h5 class="title">French</h5>
-                                                            </div>
-                                                        </li>
-                                                        <li>
-                                                            <input type="radio" name="country">
-                                                            <div class="thumb">
-                                                                <img src="assets/img/flag/07.png" alt="">
-                                                            </div>
-
-                                                            <div class="content">
-                                                                <h5 class="title">Sweden</h5>
-                                                            </div>
-                                                        </li>
-
-                                                        <li>
-                                                            <input type="radio" name="country">
-                                                            <div class="thumb">
-                                                                <img src="assets/img/flag/05.png" alt="">
-                                                            </div>
-
-                                                            <div class="content">
-                                                                <h5 class="title">Italy</h5>
-                                                            </div>
-                                                        </li>
-                                                    </ul>
-                                                </div> -->
-
                                                 <div class="part">
                                                     <h5 class="title">Admission preference</h5>
-
                                                     <div class="form-element">
                                                         <div class="row">
                                                             <div class="col-md-4 col-lg-4">
                                                                 <i class="fa-sharp fa-solid fa-earth-americas"></i>
-                                                                <select name="" id="">
-                                                                    <option disabled selected hidden> Study
-                                                                        level
-                                                                    </option>
-                                                                    <option value="beginner">Beginner</option>
-                                                                    <option value="intermediate">Intermediate</option>
-                                                                    <option value="advance">Advance</option>
+                                                                <select name="degree" required>
+                                                                    <option disabled selected hidden>Select degree</option>
+                                                                    <option value="UG">UG</option>
+                                                                    <option value="PG">PG</option>
+                                                                    <option value="PhD">PhD</option>
                                                                 </select>
                                                             </div>
-
                                                             <div class="col-md-4 col-lg-4">
                                                                 <i class="fa-solid fa-user"></i>
-                                                                <select name="" id="">
-                                                                    <option disabled selected hidden>Subject</option>
-                                                                    <option value="english">English</option>
-                                                                    <option value="bangla">Bangla</option>
+                                                                <select name="category" required>
+                                                                    <option disabled selected hidden>Categories</option>
+                                                                    <option value="Medicine">Medicine & Health</option>
+                                                                    <option value="Hospitality">Hospitality & Sports</option>
+                                                                    <option value="Engineering">Engineering & Tech</option>
+                                                                    <option value="Computer">Computer Science & IT</option>
+                                                                    <option value="Agriculture">Agriculture & Forestry</option>
+                                                                    <option value="Art">Art, Design & Culture</option>
+                                                                    <option value="Business">Business & Management</option>
                                                                 </select>
                                                             </div>
-
                                                             <div class="col-md-4 col-lg-4">
-                                                                <i class="fa-solid fa-calendar-days"></i>
-                                                                <div class="ui calendar datepicker">
-                                                                    <div class="ui input left">
-                                                                        <input type="text" placeholder="Start date">
-                                                                    </div>
-                                                                </div>
+                                                                <i class="fa-solid fa-clock"></i>
+                                                                <input type="time" name="preferredTime" placeholder="Preferred counselling time" required>
                                                             </div>
                                                         </div>
                                                     </div>
-
                                                     <div class="form-submit text-right">
-                                                        <button type="submit" class="btn-common btn-active">submit
-                                                        </button>
+                                                        <button type="submit" id="submitBtn" class="btn-common btn-active">Submit Application</button>
                                                     </div>
                                                 </div>
-
                                             </form>
                                         </div>
                                     </div>
@@ -288,6 +199,8 @@
     <script src="assets/js/slick.min.js"></script>
     <!-- main js -->
     <script src="assets/js/main.js"></script>
+    <!-- live counselling js -->
+    <script src="assets/js/live-counselling.js"></script>
 
 
 </body>
